[tool.poetry]
name = "tfcrnn"
version = "0.1.0"
description = ""
authors = ["Taejun Kim <taejun@kaist.ac.kr>"]

[tool.poetry.dependencies]
python = "^3.8"
pedalboard = "^0.6.3"
numpy = "^1.23.4"
tqdm = "^4.64.1"
wandb = "^0.13.4"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
